--- a/data/index.html
+++ b/data/index.html
@@ -11,7 +11,12 @@
   </head>
   <body>
     <div class="container">
-      <a href="/configure">Configure Z-Wave</a><br/>
+      <a href="/configure">Configure Z-Wave</a>
+      <a href="/notifications">Notifications</a>
+      <a href="/log">Log</a>
+      <a href="/error">Error</a>
+      <br/>
+
       <form role="form" style="margin:5px;" action="/update" method="post">
         <div class="form-group">
           <label for="applicationToken">Application Token:</label>
